force-app/main/default/objects/Opportunity/fields/Admin_Fee1__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee1__c</fullName>
    <label>Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>