force-app/main/default/objects/Opportunity/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agency Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Bookings</relationshipLabel>
    <relationshipName>Sales_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>