force-app/main/default/objects/Opportunity/fields/Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Number__c</fullName>
    <displayFormat>SB-{000000}</displayFormat>
    <label>Booking Number</label>
    <type>AutoNumber</type>
</CustomField>