force-app/main/default/objects/Opportunity/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Booking</fullName>
            </value>
            <value>
                <fullName>Bulk Booking</fullName>
            </value>
            <value>
                <fullName>Corporate Booking</fullName>
            </value>
            <value>
                <fullName>Investor Booking</fullName>
            </value>
            <value>
                <fullName>Resale Booking</fullName>
            </value>
            <value>
                <fullName>Underwriting Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>