force-app/main/default/objects/Opportunity/fields/Chief_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Chief_of_Sales__c</fullName>
    <formula>&quot;Siddiqa&quot; &amp; &quot; &quot; &amp; &quot;Naz&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chief of Sales</label>
    <type>Text</type>
</CustomField>