force-app/main/default/objects/Opportunity/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <defaultValue>0.06</defaultValue>
    <label>Commission %</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>