force-app/main/default/objects/Opportunity/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Bookings (Customer Name)</relationshipLabel>
    <relationshipName>Sales_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>