force-app/main/default/objects/Opportunity/fields/Customer_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Property Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Property_Unit__c.Inventory_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <filterItems>
            <field>$Source.Project_Name__c</field>
            <operation>equals</operation>
            <valueField>Property_Unit__c.Property__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Sales Bookings</relationshipLabel>
    <relationshipName>Sales_Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>