force-app/main/default/objects/Opportunity/fields/Discount_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount1__c</fullName>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>