force-app/main/default/objects/Opportunity/fields/Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Amount__c</fullName>
    <label>Down Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>