force-app/main/default/objects/Opportunity/fields/DP_Balance_to_Pay1__c.field-meta.xml
<CustomField>
    <fullName>DP_Balance_to_Pay1__c</fullName>
    <label>DP Balance to Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>