force-app/main/default/objects/Opportunity/fields/DP_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>DP_Paid_Date__c</fullName>
    <label>DP Paid Date</label>
    <type>Date</type>
</CustomField>