force-app/main/default/objects/Opportunity/fields/Expression_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Expression_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expression of Interest</label>
    <referenceTo>Expression_of_Interest__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>