force-app/main/default/objects/Opportunity/fields/Finish_Type__c.field-meta.xml
<CustomField>
    <fullName>Finish_Type__c</fullName>
    <label>Finish Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>