force-app/main/default/objects/Opportunity/fields/Head_of_Sales_VP__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Sales_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Sales / VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>