force-app/main/default/objects/Opportunity/fields/Investor_Bulk_Price__c.field-meta.xml
<CustomField>
    <fullName>Investor_Bulk_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor / Bulk Price</label>
    <type>Checkbox</type>
</CustomField>