force-app/main/default/objects/Opportunity/fields/Joint_Buyer_2__c.field-meta.xml
<CustomField>
    <fullName>Joint_Buyer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Buyer 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Bookings (Joint Buyer 2)</relationshipLabel>
    <relationshipName>Sales_Bookings4</relationshipName>
    <type>Lookup</type>
</CustomField>