force-app/main/default/objects/Opportunity/fields/Joint_Buyer_3__c.field-meta.xml
<CustomField>
    <fullName>Joint_Buyer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Buyer 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Bookings (Joint Buyer 3)</relationshipLabel>
    <relationshipName>Sales_Bookings5</relationshipName>
    <type>Lookup</type>
</CustomField>