force-app/main/default/objects/Opportunity/fields/Joint_Buyer_4__c.field-meta.xml
<CustomField>
    <fullName>Joint_Buyer_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Buyer 4</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Bookings (Joint Buyer 4)</relationshipLabel>
    <relationshipName>Sales_Bookings6</relationshipName>
    <type>Lookup</type>
</CustomField>