force-app/main/default/objects/Opportunity/fields/Joint_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Joint_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Buyer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Buyer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Bookings (Joint Buyer)</relationshipLabel>
    <relationshipName>Sales_Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>