force-app/main/default/objects/Opportunity/fields/MOP_Reference__c.field-meta.xml
<CustomField>
    <fullName>MOP_Reference__c</fullName>
    <label>MOP Reference #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>