force-app/main/default/objects/Opportunity/fields/More_Than_2_Buyers__c.field-meta.xml
<CustomField>
    <fullName>More_Than_2_Buyers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>More Than 2 Buyers</label>
    <type>Checkbox</type>
</CustomField>