force-app/main/default/objects/Opportunity/fields/Oqood_On_Hold_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Oqood_On_Hold_Reason_s__c</fullName>
    <label>Oqood On-Hold Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documents Pending</fullName>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>Developer Approval Pending</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>