force-app/main/default/objects/Opportunity/fields/Oqood_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Oqood_Remarks__c</fullName>
    <label>Oqood Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>