force-app/main/default/objects/Opportunity/fields/Oqood_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Oqood_Submission_Date__c</fullName>
    <label>Oqood Submission Date</label>
    <type>Date</type>
</CustomField>