force-app/main/default/objects/Opportunity/fields/Paid_Percentage1__c.field-meta.xml
<CustomField>
    <fullName>Paid_Percentage1__c</fullName>
    <label>Paid Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>