force-app/main/default/objects/Opportunity/fields/Payment_Plan1__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan1__c</fullName>
    <label>Payment Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Payment Plan – 0% Discount</fullName>
            </value>
            <value>
                <fullName>30% Down Payment – 4% Discount</fullName>
            </value>
            <value>
                <fullName>50% Down Payment – 8% Discount</fullName>
            </value>
            <value>
                <fullName>100% Down Payment (No ROI) – 20% Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>