force-app/main/default/objects/Opportunity/fields/POP_Amount__c.field-meta.xml
<CustomField>
    <fullName>POP_Amount__c</fullName>
    <label>POP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>