force-app/main/default/objects/Opportunity/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Sales Bookings</relationshipLabel>
    <relationshipName>Sales_Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>