force-app/main/default/objects/Opportunity/fields/Realized_Collection__c.field-meta.xml
<CustomField>
    <fullName>Realized_Collection__c</fullName>
    <label>Realized Collection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>