force-app/main/default/objects/Opportunity/fields/Sales_Executive_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Executive 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>