force-app/main/default/objects/Opportunity/fields/Sales_Executive_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Executive 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>