force-app/main/default/objects/Opportunity/fields/Secondary_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Buyer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Buyer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Bookings (Secondary Buyer)</relationshipLabel>
    <relationshipName>Sales_Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>