force-app/main/default/objects/Opportunity/fields/Selling_Price1__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price1__c</fullName>
    <label>Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>