force-app/main/default/objects/Opportunity/fields/Team_Lead_Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Sales_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead / Sales Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>