force-app/main/default/objects/Opportunity/fields/Total_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount1__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>