force-app/main/default/objects/Opportunity/fields/UAE_Residence__c.field-meta.xml
<CustomField>
    <fullName>UAE_Residence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UAE Residence</label>
    <type>Checkbox</type>
</CustomField>