force-app/main/default/objects/Opportunity/fields/Unit_Price1__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price1__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>