force-app/main/default/objects/Opportunity/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1BED</fullName>
            </value>
            <value>
                <fullName>1BED-L</fullName>
            </value>
            <value>
                <fullName>2BED</fullName>
            </value>
            <value>
                <fullName>Exe Studio</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>