force-app/main/default/objects/Opportunity/fields/X4_DLD1__c.field-meta.xml
<CustomField>
    <fullName>X4_DLD1__c</fullName>
    <label>4% DLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>