force-app/main/default/objects/Opportunity/validationRules/Agency_and_Commission_are_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Agency_and_Commission_are_required</fullName>
    <active>true</active>
    <description>Agency Name and Commission % are required when Sales Type is Indirect.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Sales_Type__c, &quot;Indirect&quot;),
    OR(
        ISBLANK(Agency_Name__c),
        ISBLANK(Commission__c)
    )
)</errorConditionFormula>
    <errorMessage>Agency Name and Commission % are required</errorMessage>
</ValidationRule>