force-app/main/default/objects/Opportunity/validationRules/Change_stage_according_to_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_stage_according_to_User</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Terminated&quot;),
    NOT(
        OR(
            $User.Alias = &quot;Snaz&quot;,
            $User.Alias = &quot;nsing&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Only CSO can Terminated this Sales Booking</errorMessage>
</ValidationRule>