force-app/main/default/objects/Opportunity/validationRules/POP_amount_should_more_than_20000.validationRule-meta.xml
<ValidationRule>
    <fullName>POP_amount_should_more_than_20000</fullName>
    <active>false</active>
    <errorConditionFormula>POP_Amount__c &gt;= 200000</errorConditionFormula>
    <errorDisplayField>POP_Amount__c</errorDisplayField>
    <errorMessage>POP Amount will always more than 20000</errorMessage>
</ValidationRule>